kustomize/components/network-policies/network-policy-adservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 9555
          protocol: TCP
  egress:
    - {}
