kustomize/components/network-policies/network-policy-checkoutservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 5050
          protocol: TCP
  egress:
    - {}
