kustomize/components/network-policies/network-policy-currencyservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 7000
          protocol: TCP
  egress:
    - {}
