kustomize/components/network-policies/network-policy-emailservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - {}
