kustomize/components/network-policies/network-policy-paymentservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice
spec:
  podSelector:
    matchLabels:
      app: paymentservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 50051
          protocol: TCP
  egress:
    - {}
