kustomize/components/network-policies/network-policy-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - port: 6379
          protocol: TCP
  egress:
    - {}
